sumo/tests/sumo/errors/network/edge/lane/root__edge__lane#depart__false12/errors.sumo
Error: Value of depart definition of lane '1_1' is invalid.
 Can not build according edge.
Error: An unknown lane ('1_1') was tried to be set as incoming to junction '2'.
Error: Trying to close connections of an unknown lane ('1_1').
Quitting (on error).
